# ago-recipe-manager

./: .gitignore  CODEX.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  migrations.rs
src-tauri/src/commands/: export.rs  mod.rs  wifi.rs
src/components/: AgoConnection.tsx  AgoPrograms.tsx  ChemistryCalculator.tsx  EmptyState.tsx  MdcLookup.tsx  RecipeEditor.tsx  RecipeList.tsx  Settings.tsx  Sidebar.tsx  SplashScreen.tsx  StepEditor.tsx  StepList.tsx  Toast.tsx
src/data/: massive_dev_chart.csv  massive_dev_chart.json
src/lib/: ago-format.ts  chemistry.ts  constants.ts  db.ts  store.ts  types.ts
src/styles/: globals.css
