[package]
name = "ago-recipe-manager"
version = "0.1.0"
description = "Companion app for the AGO Film Processor"
authors = ["Francois de Kock"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "cookies", "gzip", "brotli", "deflate"] }
regex = "1"
